<resources>
    <string name="app_name">E-Reader Final Project</string>
    <string name="navigation_1">MyBooks</string>
    <string name="navigation_2">Converter</string>
    <string name="navigation_3">Settings</string>
    <string name="navigation_4">Option 4</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="search">Search</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">\@string/Settings</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
</resources>