<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Navigation3Fragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_3" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_4" />

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/navigation_3"
        android:textColor="@color/black"
        android:textSize="24sp" />
</LinearLayout>